<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="remain_task_broadcast_action_name">RemainTask</string>
    <string name="app_name">ThreeDay</string>
    <string name="title_yesterday">昨天</string>
    <string name="title_today">今天</string>
    <string name="title_tomorrow">明天</string>
    <string name="task_state_done">已完成</string>
    <string name="task_state_undone">未完成</string>
    <string name="words_yesterday">昨天已经过去，今天才是最重要！</string>
    <string name="words_today">如果今天是你生命中最后一天，你会做什么？</string>
    <string name="words_tomorrow">明天是多么美好！</string>
    <string name="task_evaluation_dialog_title">亲，觉得你自己表现如何？</string>
    <string name="remain_to_do">记得完成哦</string>
    <string name="about">约</string>
    <string name="half">半</string>
    <string name="hour">小时</string>
    <string name="minute">分钟</string>
    <string name="second">秒</string>
    <string name="after">后哦</string>
    <string name="now_to_do">现在就要完成哦</string>
    <string name="useful_labels">常用标签</string>
    <string name="label_words_limit">10个字以内哦</string>
    <string name="add_label_dialog_title">添加常用标签</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="task_information_advice">任务：</string>
    <string name="information_empty">你还没填任务信息哦！</string>
    <string name="remind_title">是否设置提醒？</string>
    <string name="yes">好的</string>
    <string name="no">不了</string>
    <string name="check_task_day_evaluation">亲，评价一下你一天的表现哦</string>
    <string name="task_evaluation_good">满意</string>
    <string name="task_evaluation_mid">一般般</string>
    <string name="task_evaluation_bad">不满意</string>
    <string name="check_task_message">亲，还剩?条哦</string>
    <string name="task_remind_notification_ticker">亲，时间到了哦！</string>
    <string name="task_remind_title">亲，你完成了没有？</string>
    <string name="not_leave_without_finish_remain">亲，设置完再离开哦</string>
    <string name="remain_activity_label">任务提醒</string>
    <string name="setting">设置</string>
    <string name="morning_remain">早晨提醒</string>
    <string name="evening_check">晚上提醒</string>
    <string name="set_remain_time">设置提醒时间(?)</string>
    <string name="morning_remain_notification_title">早晨计划</string>
    <string name="evening_check_notification_title">晚上总结</string>
    <string name="morning_remain_notification_text">亲，记得做好今天的安排哦！</string>
    <string name="evening_check_notification_text">亲，记得总结你今天的安排哦！</string>
    <string name="set_time_before_now_toast">亲，你想穿越吗？</string>
    <string name="arrange_tomorrow_title">亲，安排一下明天吧！</string>
    <string name="new_day_slide_layer_text">滑动开启新一天</string>
    <string name="setting_lock">开启密码保护</string>
    <string name="reset_lock">重新设置密码</string>
    <string name="input_code">亲，请输入密码</string>
    <string name="input_code_again">亲，再输入一次密码</string>
    <string name="input_code_wrong">亲，密码错误哦</string>
    <string name="input_old_password">亲，请输入原来的密码</string>
    <string name="input_new_password">亲，请输入新的密码</string>
    <string name="password_less_than_two">亲，至少2位密码哦</string>
    <string name="back_press_again_exit">再按返回键退出</string>
    <string name="about_threeday">关于ThreeDay</string>
    <string name="delete_task">删除此任务</string>
    <string name="set_remain">设置提醒</string>
    <string name="cancel_remain">取消提醒</string>
    <string name="reset_remain_time">修改提醒时间</string>
    <string name="done_task">已完成此任务</string>
    <string name="undone_task">还没完成此任务</string>
    <string name="task_empty">亲，没有任务哦</string>
    <string name="operation_fail">操作失败</string>
    <string name="version">版本 1.0</string>
    <string name="welcome_page">欢迎页</string>
    <string name="contact_us">联系我们</string>
    <string name="contact_message">开发者：wind</string>
    <string name="contact_email">邮箱：</string>
    <string name="contact_email_address">1096471134@qq.com</string>
    <string name="check_update">检查更新</string>

    <string-array name="first_using_task_information">
        <item>亲，添加今天的安排吧</item>
    </string-array>
    <string-array name="add_label_default_items">
        <item>锻炼</item>
        <item>起床</item>
        <item>上班</item>
        <item>上课</item>
    </string-array>

    <string name="introduction_yesterday">你记得昨天做了什么吗？</string>
    <string name="introduction_today">你觉得今天是你生命中最后一天吗？</string>
    <string name="introduction_tomorrow">你想过明天吗</string>
    <string name="introduction_final">不管你怎么选择，这个世界还是那样。</string>
    <string name="introduction_final_2">或许，你还可以做点什么。</string>
    <string name="introduction_yesterday_yes">记得</string>
    <string name="introduction_yesterday_no">不记得</string>
    <string name="introduction_today_yes">是</string>
    <string name="introduction_today_no">不是</string>
    <string name="introduction_tomorrow_yes">想过</string>
    <string name="introduction_tomorrow_no">没想过</string>
    <string name="introduction_enter">进入ThreeDay</string>

</resources>
