<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="@dimen/long_click_menu_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/long_click_menu_foreground"
    android:padding="@dimen/long_click_menu_padding"
    android:id="@+id/menuContainer">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_task"
        android:id="@+id/deleteButton"
        android:onClick="deleteUndoneTask"
        android:textSize="@dimen/long_click_menu_font_size"
        android:gravity="center_vertical|left"
        android:background="@drawable/setting_item" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/setting_line_height"
        android:background="@color/custom_action_bar_background"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done_task"
        android:id="@+id/doneButton"
        android:onClick="doneTask"
        android:textSize="@dimen/long_click_menu_font_size"
        android:background="@drawable/setting_item"
        android:gravity="center_vertical|left" />

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/setRemianButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/setting_line_height"
            android:background="@color/custom_action_bar_background"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_remain"
            android:onClick="setUndoneTaskRemain"
            android:textSize="@dimen/long_click_menu_font_size"
            android:background="@drawable/setting_item"
            android:gravity="center_vertical|left" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cancelRemainButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/setting_line_height"
            android:background="@color/custom_action_bar_background"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_remain"
            android:onClick="cancelUndoneTaskRemain"
            android:textSize="@dimen/long_click_menu_font_size"
            android:background="@drawable/setting_item"
            android:gravity="center_vertical|left" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/changeRemainTimeButton"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/setting_line_height"
            android:background="@color/custom_action_bar_background"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_remain_time"
            android:onClick="changeUndoneTaskRemainTime"
            android:textSize="@dimen/long_click_menu_font_size"
            android:background="@drawable/setting_item"
            android:gravity="center_vertical|left" />

    </LinearLayout>

</LinearLayout>