<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/task_evaluation_dialog_item_padding"
            android:id="@+id/evaluationGood"
            android:background="@color/label_normal"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher"
                android:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/task_evaluation_good"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textSize="@dimen/check_task_evaluation_font_size"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/task_evaluation_dialog_item_padding"
            android:id="@+id/evaluationMid"
            android:background="@color/label_normal"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher"
                android:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/task_evaluation_mid"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textSize="@dimen/check_task_evaluation_font_size" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/task_evaluation_dialog_item_padding"
            android:id="@+id/evaluationBad"
            android:background="@color/label_normal"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher"
                android:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/task_evaluation_bad"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textSize="@dimen/check_task_evaluation_font_size" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>