<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:id="@+id/evaluationGood"
            android:background="@drawable/setting_item"
            android:layout_weight="1">

            <ImageView
                android:layout_width="@dimen/task_evaluation_photo_size"
                android:layout_height="@dimen/task_evaluation_photo_size"
                android:src="@drawable/evaluation_good_blue"
                android:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/task_evaluation_good"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textSize="@dimen/check_task_evaluation_font_size"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/setting_line_height"
                android:background="@color/custom_action_bar_background"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/task_evaluation_dialog_item_padding"
                android:id="@+id/evaluationMid"
                android:background="@drawable/setting_item"
                >

                <ImageView
                    android:layout_width="@dimen/task_evaluation_photo_size"
                    android:layout_height="@dimen/task_evaluation_photo_size"
                    android:src="@drawable/evaluation_mid_blue"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/task_evaluation_mid"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:textSize="@dimen/check_task_evaluation_font_size" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/setting_line_height"
                android:background="@color/custom_action_bar_background"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/task_evaluation_dialog_item_padding"
            android:id="@+id/evaluationBad"
            android:background="@drawable/setting_item"
            android:layout_weight="1">

            <ImageView
                android:layout_width="@dimen/task_evaluation_photo_size"
                android:layout_height="@dimen/task_evaluation_photo_size"
                android:src="@drawable/evaluation_bad_blue"
                android:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/task_evaluation_bad"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textSize="@dimen/check_task_evaluation_font_size" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>